--- a/src/components/drafts/esModals/esOfferDetailsModal.module.css
+++ b/src/components/drafts/esModals/esOfferDetailsModal.module.css
@@ -23,3 +23,14 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.inputMainDiv {
+    width: 60%;
+    background-color: rgba(245, 255, 255, 0.1);
+    height: 28px;
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding-left: 10px;
+    white-space: pre;
+}
