--- a/src/components/newCase/progessBar/ProgessBar.module.css
+++ b/src/components/newCase/progessBar/ProgessBar.module.css
@@ -2,7 +2,8 @@
 
 } */
 
-.progressbar {
+
+/* .progressbar {
     display: flex;
     align-items: center;
     overflow-x: scroll;
@@ -64,75 +65,76 @@
 .ckeckIcon {
     color: #ffffff;
     font-size: 20px;
-}
+} */
 
-
-/* 
 .progressbar {
-  display: flex;
-  align-items: center;
-  overflow-x: scroll;
-  border: none;
+    display: flex;
+    align-items: center;
+    overflow-x: scroll;
+    border: none;
 }
-.progressbar::-webkit-scrollbar{
- display: none;
+
+.progressbar::-webkit-scrollbar {
+    display: none;
 }
 
 .step {
-  width: 32px;
-  height: 32px;
-  aspect-ratio: 1;
-  border: 2px solid #ffffff;
-  opacity: 0.5;
-  font-size: 14px;
-  color: #ffffff;
-  border-radius: 50%;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 45px;
-  position: relative;
-  cursor: pointer;
-}
-.step:first-child {
-  margin: 0 325px 0 0;
+    width: 32px;
+    height: 32px;
+    aspect-ratio: 1;
+    border: 2px solid #ffffff;
+    opacity: 0.5;
+    font-size: 14px;
+    color: #ffffff;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 45px;
+    position: relative;
+    cursor: pointer;
 }
 
+.step:first-child {
+    margin: 0 325px 0 0;
+}
 
 .step:last-child {
-  margin: 0 0 0 -13px;
+    margin: 0 0 0 -13px;
 }
+
 .step:nth-child(2) {
-  margin: 0 325px 0 0;
+    margin: 0 325px 0 0;
 }
+
 .step:nth-child(3) {
-  margin: 0 325px 0 0;
+    margin: 0 325px 0 0;
 }
 
 .finish::before {
-  opacity: 1;
+    opacity: 1;
 }
+
 .active {
-  opacity: 1;
+    opacity: 1;
 }
 
 .step:before {
-  content: "";
-  height: 3px;
-  width: 298px;
-  background-color: #ffffff;
-  position: absolute;
-  left: 36px;
-  opacity: 0.5;
+    content: '';
+    height: 3px;
+    width: 298px;
+    background-color: #ffffff;
+    position: absolute;
+    left: 36px;
+    opacity: 0.5;
 }
 
 .step_four:before {
-  display: none;
-  
+    display: none;
 }
 
 .ckeckIcon {
-  color: #ffffff;
-  font-size: 20px;
-} */
+    color: #ffffff;
+    font-size: 20px;
+}
